README update and minor fixes in code.

--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-FW uploader to iqrf devices. (iqrf.com)
+FW uploader for iqrf devices. 
+More informations at: http://iqrf.com
+Project page: http://open-nandra.com/?page_id=108
+
+
